src/test/ui/feature-gates/feature-gate-stmt_expr_attributes.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/feature-gate-stmt_expr_attributes.rs:1:16
   |
LL | const X: i32 = #[allow(dead_code)] 8;
   |                ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/dust-lang/dust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
